--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,11 +12,11 @@ html {
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 1.125rem;
-  color: {{ site.text-col | default: "#404040" }};
+  color: "#404040";
   position: relative;
-  background-color: {{ site.page-col | default: "#FFFFFF" }};
+  background-color: "#FFFFFF";
   {% if site.page-img %}
-  background-image: url({{ site.page-img | relative_url }});
+  /* background-image: url({{ site.page-img | relative_url }}); */
   background-attachment: fixed;
   {% endif %}
   overflow-wrap: break-word;
@@ -46,11 +46,11 @@ h1, h2, h3, h4 {
   margin-top: 1.25rem;
 }
 a {
-  color: {{ site.link-col | default: "#008AFF" }};
+  color: "#008AFF";
 }
 a:hover,
 a:focus {
-  color: {{ site.hover-col | default: "#0085A1" }};
+  color: "#0085A1";
 }
 blockquote {
   color: #808080;
@@ -82,12 +82,12 @@ hr.small {
 ::-moz-selection {
   color: #fff;
   text-shadow: none;
-  background-color: {{ site.hover-col | default: "#0085A1" }};
+  background-color: "#0085A1";
 }
 ::selection {
   color: #fff;
   text-shadow: none;
-  background-color: {{ site.hover-col | default: "#0085A1" }};
+  background-color: "#0085A1";
 }
 img::selection {
   color: #fff;
