--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1.125rem;
   color: "#404040";
   position: relative;
