--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,8 @@ body {
   position: relative;
   background-color: "#FFFFFF";
   overflow-wrap: break-word;
+  margin-top: 3.0rem;
+  margin-left: 10.0rem;
 }
 p {
   line-height: 1.5;
@@ -24,18 +26,19 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   font-size: 2.25rem;
+  margin-top: 2.5rem;
 }
 h2 {
   font-size: 1.875rem;
+  margin-top: 2.0rem;
 }
 h3 {
   font-size: 1.5rem;
+  margin-top: 2.0rem;
 }
 h4 {
   font-size: 1.125rem;
-}
-h1, h2, h3, h4 {
-  margin-top: 1.25rem;
+  margin-top: 1.5rem;
 }
 a {
   color: "#008AFF";
