stylesheet: adjust margins

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,11 +13,13 @@ body {
   background-color: "#FFFFFF";
   overflow-wrap: break-word;
   margin-top: 3.0rem;
-  margin-left: 10.0rem;
+  margin-bottom: 3.0rem;
+  margin-left: 15.0rem;
+  margin-right: 15.0rem;
 }
 p {
   line-height: 1.5;
-  margin: 1.875rem 0;
+  margin: 1.25rem 0;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
