--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,18 +9,19 @@ html {
 body {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1.125rem;
-  color: "#404040";
+  color: #404040;
   position: relative;
-  background-color: "#FFFFFF";
+  background-color: #FFFFFF;
   overflow-wrap: break-word;
   margin-top: 3.0rem;
   margin-bottom: 3.0rem;
-  margin-left: 20.0rem;
-  margin-right: 20.0rem;
+  margin-left: 40.0rem;
+  margin-right: 40.0rem;
+  background-color: #F5F5F5;
 }
 p {
   line-height: 1.5;
-  margin: 1.25rem 0;
+  margin: 1.25em 0;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -29,22 +30,22 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   font-size: 2.25rem;
-  margin-top: 2.5rem;
+  margin-top: 3.5rem;
 }
 h2 {
   font-size: 1.875rem;
-  margin-top: 2.0rem;
+  margin-top: 3.0rem;
 }
 h3 {
   font-size: 1.5rem;
-  margin-top: 2.0rem;
+  margin-top: 3.0rem;
 }
 h4 {
   font-size: 1.125rem;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
 }
 a {
-  color: "#008AFF";
+  color: #008AFF;
 }
 
 /* --- List cards --- */
