--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,13 +11,11 @@ body {
   font-size: 1.125rem;
   color: #404040;
   position: relative;
-  background-color: #FFFFFF;
-  overflow-wrap: break-word;
-  margin-top: 3.0rem;
-  margin-bottom: 3.0rem;
-  margin-left: 40.0rem;
-  margin-right: 40.0rem;
   background-color: #F5F5F5;
+  overflow-wrap: break-word;
+  max-width: 1080px;
+  margin-top: 5.0rem;
+  margin-right: auto;
 }
 p {
   line-height: 1.5;
