stylesheet: optimizing design...

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 
 html {
   font-size: 100%;
-  background: white;
+  /* background: white; */
 }
 
 body {
@@ -58,5 +58,5 @@ h4 {
 /* --- Submission form --- */
 
 input {
-  width: 100%;
+  width: 80%;
 }
