--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 
 html {
   font-size: 100%;
-  /* background: white; */
+  background-color: white
 }
 
 body {
@@ -52,6 +52,7 @@ h4 {
 .card{
   border: 2px solid #696969;
   border-radius: 5px;
+  padding: 5%;
 }
 
 
