--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,9 +15,11 @@ body {
   background-color: #F5F5F5;
   overflow-wrap: break-word;
   max-width: 1620px;
-  margin: auto;
-  // margin-top: 5.0rem;
-  // margin-right: auto;
+  // margin: auto;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 0;
 }
 
 p {
