--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,12 +14,8 @@ body {
   position: relative;
   background-color: #F5F5F5;
   overflow-wrap: break-word;
-  max-width: 1620px;
-  // margin: auto;
-  margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 0;
+  max-width: 1350px;
+  margin: 0 auto;
 }
 
 p {
