--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,6 +14,7 @@ body {
   background-color: #F5F5F5;
   max-width: 1080px;
   margin: 0 auto;
+  padding: 108px 54px;
 }
 
 p {
@@ -28,7 +29,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   font-size: 2.25rem;
-  margin-top: 3.5rem;
+  margin-top: 0;
 }
 h2 {
   font-size: 1.875rem;
