--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -33,17 +33,20 @@ h1 {
 }
 h2 {
   font-size: 1.875rem;
-  margin-top: 3.0rem;
+  margin-top: 2.5rem;
 }
 h3 {
   font-size: 1.5rem;
-  margin-top: 3.0rem;
+  margin-top: 2.5rem;
 }
 h4 {
   font-size: 1.125rem;
-  margin-top: 2.5rem;
+  margin-top: 2.0rem;
 }
 
+ul{
+  display: flex;
+}
 
 /* --- List cards --- */
 
@@ -53,10 +56,19 @@ h4 {
   padding: 20px;
 }
 
+.card.h4{
+  margin-top: 0;
+}
+
 
 /* --- Submission form --- */
 
 input {
+  display: block;
+  width: 80%;
+}
+
+textarea {
   display: block;
   width: 80%;
 }
