--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,10 +56,13 @@ ul{
   padding: 20px;
 }
 
-.card.h4{
+.card-body.h4{
   margin-top: 0;
 }
 
+.card-body.card-text{
+  margin-bottom: 0;
+}
 
 /* --- Submission form --- */
 
@@ -70,5 +73,10 @@ input {
 
 textarea {
   display: block;
+  width: 80%;
+}
+
+.mb3-row{
+  margin-top: 20px;
   width: 80%;
 }
