stylesheet: more fixes...

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,7 +45,7 @@ h4 {
 }
 
 ul li{
-  margin: 0.25rem 0;
+  margin: 0.1rem 0;
 }
 
 
@@ -61,7 +61,7 @@ ul li{
   margin-top: 0;
 }
 
-.card-body card-text{
+.card-body .card-text{
   margin-bottom: 0;
 }
 
@@ -78,7 +78,7 @@ textarea {
   width: 80%;
 }
 
-.mb3-row{
+.mb3 {
   margin-top: 20px;
   width: 80%;
 }
