stylesheet: more fixes...

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,7 +44,7 @@ h4 {
   margin-top: 2.0rem;
 }
 
-ul li{
+ul li p{
   margin: 0.1rem 0;
 }
 
@@ -78,7 +78,7 @@ textarea {
   width: 80%;
 }
 
-.mb3 {
+.mb-3 {
   margin-top: 20px;
   width: 80%;
 }
