--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,7 +45,7 @@ h4 {
 }
 
 ul li p{
-  margin: 0.1rem 0;
+  margin: 0.25rem 0;
 }
 
 
@@ -70,15 +70,21 @@ ul li p{
 
 input {
   display: block;
-  width: 80%;
+  width: 100%;
 }
 
 textarea {
   display: block;
-  width: 80%;
+  width: 100%;
 }
 
 .mb-3 {
   margin-top: 20px;
   width: 80%;
+}
+
+button {
+  padding: 20px;
+  width: 40%;
+  color: #006400;
 }
