stylesheet: more optimization

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,7 +45,7 @@ h4 {
 }
 
 ul li p{
-  margin: 0.25rem 0;
+  margin: 0.6rem 0;
 }
 
 
@@ -86,5 +86,8 @@ textarea {
 button {
   padding: 20px;
   width: 40%;
-  color: #006400;
+  background-color: #006400;
+  color: white;
+  font-size: 2.0rem;
+  font-weight: bold;
 }
