stylesheet: more optimization

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -81,6 +81,11 @@ textarea {
 .mb-3 {
   margin-top: 20px;
   width: 80%;
+  font-weight: bold;
+}
+
+.mb-3 .text-muted{
+  font-weight: normal;
 }
 
 button {
@@ -88,6 +93,6 @@ button {
   width: 40%;
   background-color: #006400;
   color: white;
-  font-size: 2.0rem;
+  font-size: 1.8rem;
   font-weight: bold;
 }
