--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,7 +44,7 @@ h4 {
   margin-top: 2.0rem;
 }
 
-ul li p{
+ul li ul li p{
   margin: 0.6rem 0;
 }
 
@@ -70,7 +70,7 @@ ul li p{
 
 input {
   display: block;
-  width: 100%;
+  width: 50%;
 }
 
 textarea {
@@ -86,6 +86,7 @@ textarea {
 
 .mb-3 .text-muted{
   font-weight: normal;
+  font-style: italic;
 }
 
 button {
