--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,7 +45,7 @@ h4 {
 }
 h5 {
   font-size: 1.125rem;
-  margin-top: 1.5rem;
+  margin-top: 2.0rem;
   padding-left: 20px;
   font-style: italic;
 }
@@ -74,20 +74,23 @@ ul li ul li p{
 
 /* --- Submission form --- */
 
-.mb-3 {
+.mb-3{
   margin-top: 20px;
   width: 80%;
   font-weight: bold;
+}
+
+.mb-3 label{
+  margin-bottom: 5px;
 }
 
 .mb-3 .text-muted{
   font-weight: normal;
   font-style: italic;
   color: #696969;
-  margin-top: 5px;
 }
 
-input {
+input{
   display: block;
   width: 50%;
   margin-top: 5px;
@@ -96,10 +99,10 @@ input {
 textarea {
   display: block;
   width: 100%;
-  margin-top: 5ox;
+  margin-top: 5px;
 }
 
-button {
+button{
   padding: 20px;
   width: 40%;
   background-color: #006400;
