Attempt at changing Country to Timezone

--- a/_layouts/shuffle.html
+++ b/_layouts/shuffle.html
@@ -36,15 +36,15 @@
     {% for member_name in site.data.members %}
     {% assign member = member_name[1] %}
 
-    <figure class="col-6@xs col-6@sm col-6@md picture-item picture-item--h2" data-groups='["{{ member.country | strip_html | escape }}"]' data-title="{{ member.name | strip_html | escape }} {{ member.country | strip_html | escape }} {{ member.affiliation | strip_html | escape }} {{ member.languages | strip_html | escape }} {{ member.expertise | strip_html | escape }} ">
+    <figure class="col-6@xs col-6@sm col-6@md picture-item picture-item--h2" data-groups='["{{ member.timezone | strip_html | escape }}"]' data-title="{{ member.name | strip_html | escape }} {{ member.timezone | strip_html | escape }} {{ member.affiliation | strip_html | escape }} {{ member.languages | strip_html | escape }} {{ member.expertise | strip_html | escape }} ">
       <div class="picture-item__inner">
         <div class="picture-item__details">
           <figcaption class="picture-item__title"><em>{{ member.name | strip_html | escape }}</em></figcaption>
-          <p class="picture-item__tags hidden@xs"><strong>{{ member.country | strip_html | escape }}</strong></p>
+          <p class="picture-item__tags hidden@xs"><strong>{{ member.timezone | strip_html | escape }}</strong></p>
         </div>
         <p class="picture-item__description">
           <strong>Affiliation:</strong> {{ member.affiliation | strip_html | escape }}<br/>
-          <strong>Country:</strong> {{ member.country | strip_html | escape }}<br/>
+          <strong>Timezone:</strong> {{ member.timezone | strip_html | escape }}<br/>
           <strong>E-mail:</strong> {{ member.email | strip_html | escape }}<br/>
           {% if member.website and member.website != "" %}<strong>Website:</strong> {{ member.website | strip_html | escape }}<br/>{% endif %}
           {% if member.languages and member.languages != "" %}<strong>Languages:</strong> {{ member.languages | strip_html | escape }}<br/>{% endif %}
