Remove top right timezone tag on cards

--- a/_layouts/shuffle.html
+++ b/_layouts/shuffle.html
@@ -40,7 +40,7 @@
       <div class="picture-item__inner">
         <div class="picture-item__details">
           <figcaption class="picture-item__title"><em>{{ member.name | strip_html | escape }}</em></figcaption>
-          <p class="picture-item__tags hidden@xs"><strong>{{ member.timezone | strip_html | escape }}</strong></p>
+          <!-- <p class="picture-item__tags hidden@xs"><strong>{{ member.timezone | strip_html | escape }}</strong></p> -->
         </div>
         <p class="picture-item__description">
           <strong>Affiliation:</strong> {{ member.affiliation | strip_html | escape }}<br/>
