--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
     <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="Research Support Network | Expert Volunteer List">
+    <meta property="og:description" content="A list of researchers with computational expertise who are willing to provide virtual support and advice for scientists forced to refocus on computational work due to a crisis.">
+    <meta property="og:image" content="/assets/image/RSN-logo-300x300.png">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
 
     <title>{{ page.title }}</title>
   </head>
