--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Research Support Network | Expert Volunteer List">
-    <meta property="og:description" content="A list of researchers with computational expertise who are willing to provide virtual support and advice for scientists forced to refocus on computational work due to a crisis.">
+    <meta property="og:description" content="List of computational science experts volunteering to support scientists affected by crisis">
     <meta property="og:image" content="/assets/image/RSN-logo-1200x627.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="627">
